Refactor and cleanup

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -1,7 +1,8 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug"
+      "Default": "Debug",
+      "System.Net.Http": "Information"
     }
   }
 }
