--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "System.Net.Http": "Warning",
       "Microsoft.AspNetCore": "Warning"
     }
   },
